--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -42,9 +42,10 @@ jobs:
       - name: Set ENV-variables for test-environment
         run: |
           cp example.env .env
-      
+
       - name: Install API-service code-dependencies
-        run: cd ./services/API-service && npm ci --omit=optional --no-fund --no-audit
+        run: |
+          cd ./services/API-service && npm ci --omit=optional --no-fund --no-audit
 
       - name: Run Services with Docker
         working-directory: ./
@@ -52,11 +53,13 @@ jobs:
           docker compose up -d
 
       - name: Start Interface
-        working-directory: ./
+        working-directory: 'interfaces/IBF-dashboard'
         env:
           NG_API_URL: http://localhost:4000/api
         run: |
-          npm run start:interface &
+          docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
+        # run: |
+        #   npm run start:interface &
 
       - name: Install E2E-Tests runtime-dependencies
         working-directory: ${{ env.e2eTestsPath }}
