Update example file

--- a/example.env
+++ b/example.env
@@ -3,14 +3,14 @@ CERTBOT_EMAIL=
 FQDN=
 
 # services/API-service
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
-SECRET=
-RESET_SECRET=
-NODE_ENV=
+DB_HOST=ibf-local-db #docker.for.mac.localhost
+DB_PORT=5432 #5437
+DB_DATABASE=ibf
+DB_USERNAME=ibf
+DB_PASSWORD=ibf
+SECRET=secret
+RESET_SECRET=fill_in_secret
+NODE_ENV=development
 LOCAL_PORT_IBF_SERVICE=4000 # If you do not specify a port, the default port is 3000. this only applies to the override docker-compose file
 
 # Token used to acces the water point data at https://data.waterpointdata.org/profile/edit/developer_settings
