--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Start Interface
         working-directory: 'interfaces/IBF-dashboard'
-        # env:
-        #   NG_API_URL: http://localhost:4000/api
+        env:
+          NG_API_URL: http://localhost:4000/api
         run: |
           docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
 
@@ -66,7 +66,7 @@ jobs:
 
       - name: Wait for IBF-System to be running
         run: |
-          timeout 100s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-portal to be running..."; sleep 1; done'
+          timeout 300s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-portal to be running..."; sleep 1; done'
 
       - name: Run E2E-Tests with Playwright
         working-directory: ${{ env.e2eTestsPath }}
