--- a/example.env
+++ b/example.env
@@ -61,15 +61,14 @@ MC_SEGMENTS=ZMB:90286,UGA:102274,KEN:90702,ETH:90706,EGY:100810,PHL:105802,ZWE:1
 
 # Twilio
 EXTERNAL_API_SERVICE_URL= #end with slash
-TWILIO_SID=
-TWILIO_AUTHTOKEN=
+TWILIO_SID=AC_example #some value starting with AC needed for api-service to compile
+TWILIO_AUTHTOKEN=example #some value needed for api-service to compile
 TWILIO_MESSAGING_SID=
 TWILIO_WHATSAPP_NUMBER=+
 
 # Playwright configuration
 AZURE_DEV_URL=
 AZURE_DEVOPS_TOKEN=
-BASE_URL=http://localhost:4200
 BASE_URL_IBF_SERVICE=
 
 # Playwright users for testing
