--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -68,7 +68,7 @@ jobs:
         env:
           MC_API: ${{ secrets.MC_API }}
         run: |
-          timeout 90s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-portal to be running..."; sleep 1; done'
+          timeout 90s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-API-service to be running..."; sleep 1; done'
 
       - name: Run E2E-Tests with Playwright
         working-directory: ${{ env.e2eTestsPath }}
