temp: set permissions in compose yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       web-server-network:
       api-network:
     restart: unless-stopped
+    user: "node"
 
   ibf-dashboard:
     build:
