--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -52,12 +52,12 @@ jobs:
         env:
           MC_API: ${{ secrets.MC_API }}
         run: |
-          docker compose -f docker-compose.yml up -d
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
 
       # - name: Start Interface
       #   working-directory: 'interfaces/IBF-dashboard'
       #   env:
-      #     NG_API_URL: http://localhost:3000/api
+      #     NG_API_URL: http://localhost:4000/api
       #   run: |
       #     docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
 
@@ -68,7 +68,7 @@ jobs:
 
       - name: Wait for IBF-API-service to be running
         run: |
-          timeout 30s sh -c 'until curl http://localhost:3000/api -I; do echo "Waiting for the IBF-API-service to be running..."; sleep 1; done'
+          timeout 30s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-API-service to be running..."; sleep 1; done'
 
       - name: Run E2E-Tests with Playwright
         working-directory: ${{ env.e2eTestsPath }}
