--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -12,6 +12,7 @@ services:
     networks:
       - web-server-network
       - api-network
+    user: root
 
   ibf-dashboard:
     entrypoint: ['echo', 'Service ibf-dashboard disabled']
