--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -61,14 +61,18 @@ jobs:
       #   run: |
       #     docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
 
-      # - name: Install E2E-Tests runtime-dependencies
-      #   working-directory: ${{ env.e2eTestsPath }}
-      #   run: |
-      #     npx playwright install chromium --with-deps
-
-      - name: Wait for IBF-API-service to be running
+      - name: Install E2E-Tests runtime-dependencies
+        working-directory: ${{ env.e2eTestsPath }}
         run: |
-          timeout 60s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF-API-service to be running..."; sleep 1; done'
+          npx playwright install chromium --with-deps
+
+      - name: Wait for IBF API-service to be running
+        run: |
+          timeout 60s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF API-service to be running..."; sleep 1; done'
+
+      - name: Wait for IBF Portal to be running
+        run: |
+          timeout 60s sh -c 'until curl http://localhost:4200 -I; do echo "Waiting for the IBF Portal to be running..."; sleep 1; done'
 
       - name: Run E2E-Tests with Playwright
         working-directory: ${{ env.e2eTestsPath }}
