--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -30,14 +30,14 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '${{ env.e2eTestsPath }}/package-lock.json'
 
-      - name: Install E2E-Tests code-dependencies
-        working-directory: ${{ env.e2eTestsPath }}
-        run: |
-          npm ci --omit=optional --no-fund --no-audit
+      # - name: Install E2E-Tests code-dependencies
+      #   working-directory: ${{ env.e2eTestsPath }}
+      #   run: |
+      #     npm ci --omit=optional --no-fund --no-audit
 
-      - name: Lint E2E-Tests code
-        working-directory: ${{ env.e2eTestsPath }}
-        run: 'npm run lint'
+      # - name: Lint E2E-Tests code
+      #   working-directory: ${{ env.e2eTestsPath }}
+      #   run: 'npm run lint'
 
       - name: Set ENV-variables for test-environment
         run: |
@@ -54,17 +54,18 @@ jobs:
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
 
-      # - name: Start Interface
-      #   working-directory: 'interfaces/IBF-dashboard'
-      #   env:
-      #     NG_API_URL: http://localhost:4000/api
-      #   run: |
-      #     docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
-
-      - name: Install E2E-Tests runtime-dependencies
-        working-directory: ${{ env.e2eTestsPath }}
+      - name: Start Interface
+        working-directory: 'interfaces/IBF-dashboard'
+        env:
+          NG_API_URL: http://localhost:4000/api
         run: |
-          npx playwright install chromium --with-deps
+          npm install
+          npm run start
+
+      # - name: Install E2E-Tests runtime-dependencies
+      #   working-directory: ${{ env.e2eTestsPath }}
+      #   run: |
+      #     npx playwright install chromium --with-deps
 
       - name: Wait for IBF API-service to be running
         run: |
