--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -30,14 +30,14 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '${{ env.e2eTestsPath }}/package-lock.json'
 
-      # - name: Install E2E-Tests code-dependencies
-      #   working-directory: ${{ env.e2eTestsPath }}
-      #   run: |
-      #     npm ci --omit=optional --no-fund --no-audit
+      - name: Install E2E-Tests code-dependencies
+        working-directory: ${{ env.e2eTestsPath }}
+        run: |
+          npm ci --omit=optional --no-fund --no-audit
 
-      # - name: Lint E2E-Tests code
-      #   working-directory: ${{ env.e2eTestsPath }}
-      #   run: 'npm run lint'
+      - name: Lint E2E-Tests code
+        working-directory: ${{ env.e2eTestsPath }}
+        run: 'npm run lint'
 
       - name: Set ENV-variables for test-environment
         run: |
@@ -63,10 +63,10 @@ jobs:
           npm install
           npm run start:prod > portal-server-logs.txt 2>&1 &
 
-      # - name: Install E2E-Tests runtime-dependencies
-      #   working-directory: ${{ env.e2eTestsPath }}
-      #   run: |
-      #     npx playwright install chromium --with-deps
+      - name: Install E2E-Tests runtime-dependencies
+        working-directory: ${{ env.e2eTestsPath }}
+        run: |
+          npx playwright install chromium --with-deps
 
       - name: Wait for IBF API-service to be running
         run: |
