--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -43,9 +43,9 @@ jobs:
         run: |
           cp example.env .env
 
-      # - name: Install API-service code-dependencies
-      #   run: |
-      #     cd ./services/API-service && npm ci --omit=optional --no-fund --no-audit
+      - name: Install API-service code-dependencies
+        run: |
+          cd ./services/API-service && npm ci --omit=optional --no-fund --no-audit
 
       - name: Run Services with Docker
         working-directory: ./
