ci: add name and id to call e2e action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,7 +78,9 @@ jobs:
       - run: npm test
 
   ibf-e2e:
-      - uses: ./.github/actions/e2e
+      - name: Run E2E tests
+        id: e2e
+        uses: ./.github/actions/e2e
 
   bump-version:
     needs: [ibf-api-service, ibf-dashboard]
