ci: use steps instead of name and id

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,9 +78,8 @@ jobs:
       - run: npm test
 
   ibf-e2e:
-      - name: Run E2E tests
-        id: e2e
-        uses: ./.github/actions/e2e
+    steps:
+      - uses: ./.github/actions/e2e
 
   bump-version:
     needs: [ibf-api-service, ibf-dashboard]
