--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -84,6 +84,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/e2e
+        with:
+          mailchimp-api-key: ${{ secrets.MC_API }}
 
   bump-version:
     needs: [ibf-api-service, ibf-dashboard]
