--- a/.github/actions/e2e/action.yml
+++ b/.github/actions/e2e/action.yml
@@ -10,9 +10,6 @@ runs:
     using: composite
 
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
       - name: Set up Node.js version
         uses: actions/setup-node@v4
         with:
@@ -21,27 +18,33 @@ runs:
           cache-dependency-path: './e2e/package-lock.json'
 
       - name: Install E2E-Tests code-dependencies
+        shell: bash
         working-directory: ./e2e
         run: npm ci --omit=optional --no-fund --no-audit
 
       - name: Lint E2E-Tests code
+        shell: bash
         working-directory: ./e2e
         run: npm run lint
 
       - name: Set ENV-variables for test-environment
+        shell: bash
         run: cp example.env .env
 
       - name: Install API-service
+        shell: bash
         working-directory: ./services/API-service
         run: npm ci --omit=optional --no-fund --no-audit
 
       - name: Run API-service
+        shell: bash
         working-directory: ./
         env:
           MC_API: ${{ inputs.mailchimp-api-key }}
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d ibf-api-service
 
       - name: Start IBF-dashboard
+        shell: bash
         working-directory: 'interfaces/IBF-dashboard'
         env:
           NG_API_URL: http://localhost:4000/api
@@ -51,16 +54,20 @@ runs:
           npm run start:prod > dashboard-logs.txt 2>&1 &
 
       - name: Install E2E-Tests runtime-dependencies
+        shell: bash
         working-directory: ./e2e
         run: npx playwright install chromium --with-deps
 
       - name: Wait for IBF API-service to be running
+        shell: bash
         run: timeout 60s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF API-service to be running..."; sleep 1; done'
 
       - name: Wait for IBF-dashboard to be running
+        shell: bash
         run: timeout 60s sh -c 'until curl http://localhost:4200 -I; do echo "Waiting for the IBF-dashboard to be running..."; sleep 1; done'
 
       - name: Run E2E-Tests with Playwright
+        shell: bash
         working-directory: ./e2e
         env:
           DASHBOARD_URL: http://localhost:4200
