--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -83,7 +83,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/e2e
+      - name: Run E2E test action
+        uses: ./.github/actions/e2e
         with:
           mailchimp-api-key: ${{ secrets.MC_API }}
 
