--- a/.github/actions/integration/action.yml
+++ b/.github/actions/integration/action.yml
@@ -1,6 +1,11 @@
 name: 'integration'
 description: 'Run integration tests'
 
+inputs:
+  mailchimp-api-key:
+    description: 'Mailchimp API key'
+    required: true
+
 runs:
     using: composite
 
@@ -34,7 +39,7 @@ runs:
 
       - name: Wait for IBF API-service to be running
         shell: bash
-        run: timeout 120s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF API-service to be running..."; sleep 1; done'
+        run: timeout 60s sh -c 'until curl http://localhost:4000/api -I; do echo "Waiting for the IBF API-service to be running..."; sleep 1; done'
 
       - name: Run integration tests
         shell: bash
