--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,13 +76,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run integration test action
         uses: ./.github/actions/integration
+        with:
+          mailchimp-api-key: ${{ secrets.MC_API }}
 
   ibf-e2e:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run E2E test action
+      - name: Run e2e test action
         uses: ./.github/actions/e2e
         with:
           mailchimp-api-key: ${{ secrets.MC_API }}
