ci: add MWI and SSD to example.env

--- a/example.env
+++ b/example.env
@@ -18,10 +18,10 @@ WATERPOINTDATA_TOKEN=
 # This password is only needed for production
 ADMIN_PASSWORD=
 DASHBOARD_URL=http://localhost:4200
-COUNTRIES=UGA,ZMB,ETH,PHL,ZWE
+COUNTRIES=UGA,ZMB,ETH,PHL,ZWE,MWI,SSD
 # If a disaster-type should not load for possible countries, then list the countries to load as in the example below
 # If no countries specified, then the disaster-type will load for all possible countries  
-DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,heavy-rain,dengue,malaria,drought,typhoon
+DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,heavy-rain,dengue,malaria,drought,typhoon,flash-floods
 
 # IBF-geoserver
 GEOSERVER_ADMIN_PASSWORD=
