--- a/example.env
+++ b/example.env
@@ -12,6 +12,7 @@ SECRET=secret
 RESET_SECRET=fill_in_secret
 NODE_ENV=development
 LOCAL_PORT_IBF_SERVICE=3000 # If you do not specify a port, the default port is 3000. this only applies to the override docker-compose file
+API_SERVICE_URL=http://localhost:3000/api # URL should not end with trailing slash
 
 # Token used to acces the water point data at https://data.waterpointdata.org/profile/edit/developer_settings
 WATERPOINTDATA_TOKEN=
@@ -28,7 +29,6 @@ GEOSERVER_ADMIN_PASSWORD=
 
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
-NG_API_URL=http://localhost:3000/api # URL should not end with trailing slash
 NG_USE_SERVICE_WORKER=
 NG_GEOSERVER_URL=
 NG_IBF_SYSTEM_VERSION=
@@ -69,4 +69,3 @@ TWILIO_WHATSAPP_NUMBER=+
 # Playwright configuration
 AZURE_DEV_URL=
 AZURE_DEVOPS_TOKEN=
-BASE_URL_IBF_SERVICE=http://localhost:3000/api
