--- a/handover.example.env
+++ b/handover.example.env
@@ -40,7 +40,7 @@ FQDN=
 # Fill in the URL pointing to the dashboard including https: e.g. https://ibf.510.global
 DASHBOARD_URL=
 # Fill in as: <DASHBOARD_URL>/api
-NG_API_URL=
+API_SERVICE_URL=
 # Fill in as: <DASHBOAR_URL>/geoserver/ibf-system/wms
 NG_GEOSERVER_URL=
 
