--- a/interfaces/IBF-dashboard/Dockerfile
+++ b/interfaces/IBF-dashboard/Dockerfile
@@ -19,8 +19,8 @@ EXPOSE 4200
 ARG NG_CONFIGURATION
 ENV NG_CONFIGURATION=$NG_CONFIGURATION
 
-ARG NG_API_URL
-ENV NG_API_URL=$NG_API_URL
+ARG API_SERVICE_URL
+ENV API_SERVICE_URL=$API_SERVICE_URL
 
 ARG NG_USE_SERVICE_WORKER
 ENV NG_USE_SERVICE_WORKER=$NG_USE_SERVICE_WORKER
