Add fixes from review

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@alex_neo/playwright-azure-reporter": "^1.10.1",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.5",
     "playwright": "^1.47.0",
     "structured-clone": "^0.2.2",
