--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "open:ibf-api-service": "open http://localhost:3000/docs",
     "test:interface": "npm test --prefix interfaces/IBF-dashboard/",
     "test:performance": "npm run lighthouse:run",
+    "test:e2e": "npm test --prefix tests/e2e",
+    "test:integration": "npm test --prefix tests/integration",
     "lint": "npx npm-run-all --print-label --parallel lint:interface lint:services",
     "lint:services": "npm run lint --prefix services/API-service/",
     "lint:interface": "npm run lint --prefix interfaces/IBF-dashboard/",
