ci: integration tests depend only on the api-service

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,10 +71,7 @@ jobs:
 
   ibf-integration:
     needs: detect-changes
-    if: ${{
-      needs.detect-changes.outputs.ibf-api-service == 'true' ||
-      needs.detect-changes.outputs.ibf-dashboard == 'true'
-      }}
+    if: ${{ needs.detect-changes.outputs.ibf-api-service == 'true' }}
 
     runs-on: ubuntu-latest
 
