--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -1,9 +1,7 @@
 server {
-    listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
+    listen 80;
 
-    server_name ${FQDN} www.${FQDN};
+    server_name _;
 
     server_tokens off;
 
