--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,10 @@ jobs:
               - "services/API-service/**"
             ibf-dashboard:
               - "interfaces/IBF-dashboard/**"
+            ibf-e2e:
+              - "tests/e2e/**"
+            ibf-integration:
+              - "tests/integration/**"
 
   ibf-api-service:
     needs: detect-changes
@@ -71,7 +75,10 @@ jobs:
 
   ibf-integration:
     needs: detect-changes
-    if: ${{ needs.detect-changes.outputs.ibf-api-service == 'true' }}
+    if: ${{
+      needs.detect-changes.outputs.ibf-api-service == 'true' ||
+      needs.detect-changes.outputs.ibf-integration == 'true'
+      }}
 
     runs-on: ubuntu-latest
 
@@ -86,7 +93,8 @@ jobs:
     needs: detect-changes
     if: ${{
       needs.detect-changes.outputs.ibf-api-service == 'true' ||
-      needs.detect-changes.outputs.ibf-dashboard == 'true'
+      needs.detect-changes.outputs.ibf-dashboard == 'true' ||
+      needs.detect-changes.outputs.ibf-e2e == 'true'
       }}
 
     runs-on: ubuntu-latest
