chore: update prettier ignore

--- a/interfaces/IBF-dashboard/.prettierignore
+++ b/interfaces/IBF-dashboard/.prettierignore
@@ -17,4 +17,4 @@ README.md
 # to import zone-testing in the right order for angular 11
 src/test.ts
 
-src/environments/environment.prod.ts
+src/environments/environment.production.ts
